meja/tests/list_weak_variable.stderr
File "tests/list_weak_variable.meja", line 1, characters 8-10:
Error: Incompatable types '_' and ''a list':
Cannot unify 'int' and 'bool'.

